--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
   <title>Portal de Notícias</title>
 </head>
 <body>
-  
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="./assets/icons/List.svg" alt="ícone de menu">
+        <strong>Menu</strong>
+      </div>
+      <div>
+        <img src="./assets/Logo.svg" alt="logomarca">
+      </div>
+      <div>
+        <strong>Buscar</strong>
+        <img src="./assets/icons/MagnifyingGlass.svg" alt="ícone de buscar">
+      </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestíveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade Virtual</a>
+    </nav>
+  </header>
 </body>
 </html>
